// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductDetailsForm /> renders when loading data 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3"
>
  <div
    className="Component-root-32"
  >
    <button
      className="MuiButtonBase-root-41 MuiIconButton-root-35 MuiIconButton-colorInherit-36 Component-menuButton-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-44"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-50"
      />
    </button>
    <h2
      className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
    >
      Edit product
    </h2>
    <div
      className="Component-action-29"
    />
  </div>
  <div
    className="MuiCardContent-root-81"
  >
    <div
      className="Component-root-1"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-82 MuiFormControl-fullWidth-85"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="MuiInput-root-86 MuiInput-disabled-89 MuiInput-fullWidth-93 MuiInput-formControl-87 MuiInput-underline-90"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-94 MuiInput-inputDisabled-96"
            defaultValue={undefined}
            disabled={true}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value={undefined}
          />
        </div>
      </div>
      <span />
      <div
        className="MuiFormControl-root-82 MuiFormControl-fullWidth-85"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="MuiInput-root-86 MuiInput-disabled-89 MuiInput-formControl-87 MuiInput-underline-90"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-94 MuiInput-inputDisabled-96 MuiInput-inputType-98"
            defaultValue={undefined}
            disabled={true}
            id={undefined}
            name="price"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="number"
            value=""
          />
          <span />
        </div>
      </div>
    </div>
    <div
      className="Component-spacer-104"
    />
    <div
      className="MuiFormControl-root-82"
      onBlur={[Function]}
      onFocus={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="MuiInput-root-86 MuiInput-disabled-89 MuiInput-fullWidth-93 MuiInput-formControl-87 MuiInput-multiline-92 MuiInput-underline-90"
      >
        <div
          className="MuiTextarea-root-105"
          style={
            Object {
              "height": 19,
            }
          }
        >
          <textarea
            aria-hidden="true"
            className="MuiTextarea-shadow-107 MuiTextarea-textarea-106"
            readOnly={true}
            rows="1"
            tabIndex={-1}
            value=""
          />
          <textarea
            aria-hidden="true"
            className="MuiTextarea-shadow-107 MuiTextarea-textarea-106"
            defaultValue={undefined}
            readOnly={true}
            rows={1}
            tabIndex={-1}
            value={undefined}
          />
          <textarea
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiTextarea-textarea-106 MuiInput-input-94 MuiInput-inputDisabled-96 MuiInput-inputMultiline-97"
            defaultValue={undefined}
            disabled={true}
            id={undefined}
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={1}
            type="text"
            value={undefined}
          />
        </div>
      </div>
      <p
        className="MuiFormHelperText-root-108"
      >
        Select text to enable text-formatting tools.
      </p>
    </div>
  </div>
</div>
`;

exports[`<ProductDetailsForm /> renders with no value 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3"
>
  <div
    className="Component-root-32"
  >
    <button
      className="MuiButtonBase-root-41 MuiIconButton-root-35 MuiIconButton-colorInherit-36 Component-menuButton-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-44"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-50"
      />
    </button>
    <h2
      className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
    >
      Edit product
    </h2>
    <div
      className="Component-action-29"
    />
  </div>
  <div
    className="MuiCardContent-root-81"
  >
    <div
      className="Component-root-1"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-82 MuiFormControl-fullWidth-85"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="MuiInput-root-86 MuiInput-fullWidth-93 MuiInput-formControl-87 MuiInput-underline-90"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-94"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value={undefined}
          />
        </div>
      </div>
      <span />
      <div
        className="MuiFormControl-root-82 MuiFormControl-fullWidth-85"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="MuiInput-root-86 MuiInput-formControl-87 MuiInput-underline-90"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-94 MuiInput-inputType-98"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name="price"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="number"
            value=""
          />
          <span />
        </div>
      </div>
    </div>
    <div
      className="Component-spacer-104"
    />
    <div
      className="MuiFormControl-root-82"
      onBlur={[Function]}
      onFocus={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="MuiInput-root-86 MuiInput-fullWidth-93 MuiInput-formControl-87 MuiInput-multiline-92 MuiInput-underline-90"
      >
        <div
          className="MuiTextarea-root-105"
          style={
            Object {
              "height": 19,
            }
          }
        >
          <textarea
            aria-hidden="true"
            className="MuiTextarea-shadow-107 MuiTextarea-textarea-106"
            readOnly={true}
            rows="1"
            tabIndex={-1}
            value=""
          />
          <textarea
            aria-hidden="true"
            className="MuiTextarea-shadow-107 MuiTextarea-textarea-106"
            defaultValue={undefined}
            readOnly={true}
            rows={1}
            tabIndex={-1}
            value={undefined}
          />
          <textarea
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiTextarea-textarea-106 MuiInput-input-94 MuiInput-inputMultiline-97"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={1}
            type="text"
            value={undefined}
          />
        </div>
      </div>
      <p
        className="MuiFormHelperText-root-108"
      >
        Select text to enable text-formatting tools.
      </p>
    </div>
  </div>
</div>
`;

exports[`<ProductDetailsForm /> renders with value 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation2-6 MuiPaper-rounded-3"
>
  <div
    className="Component-root-32"
  >
    <button
      className="MuiButtonBase-root-41 MuiIconButton-root-35 MuiIconButton-colorInherit-36 Component-menuButton-31"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-40"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-44"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-50"
      />
    </button>
    <h2
      className="MuiTypography-root-57 MuiTypography-title-63 Component-title-34"
    >
      Edit product
    </h2>
    <div
      className="Component-action-29"
    />
  </div>
  <div
    className="MuiCardContent-root-81"
  >
    <div
      className="Component-root-1"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-82 MuiFormControl-fullWidth-85"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="MuiInput-root-86 MuiInput-fullWidth-93 MuiInput-formControl-87 MuiInput-underline-90"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-94"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value="Our totally awesome book"
          />
        </div>
      </div>
      <span />
      <div
        className="MuiFormControl-root-82 MuiFormControl-fullWidth-85"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          className="MuiInput-root-86 MuiInput-formControl-87 MuiInput-underline-90"
        >
          <input
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-94 MuiInput-inputType-98"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name="price"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="number"
            value="300"
          />
          <div
            className="MuiInputAdornment-root-112 MuiInputAdornment-positionEnd-114"
          >
            <p
              className="MuiTypography-root-57 MuiTypography-body1-66 MuiTypography-colorTextSecondary-79"
            >
              USD
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="Component-spacer-104"
    />
    <div
      className="MuiFormControl-root-82"
      onBlur={[Function]}
      onFocus={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="MuiInput-root-86 MuiInput-fullWidth-93 MuiInput-formControl-87 MuiInput-multiline-92 MuiInput-underline-90"
      >
        <div
          className="MuiTextarea-root-105"
          style={
            Object {
              "height": 19,
            }
          }
        >
          <textarea
            aria-hidden="true"
            className="MuiTextarea-shadow-107 MuiTextarea-textarea-106"
            readOnly={true}
            rows="1"
            tabIndex={-1}
            value=""
          />
          <textarea
            aria-hidden="true"
            className="MuiTextarea-shadow-107 MuiTextarea-textarea-106"
            defaultValue={undefined}
            readOnly={true}
            rows={1}
            tabIndex={-1}
            value="Aenean sit amet malesuada nibh. Proin nisi lorem, facilisis at tortor vel, convallis ornare nibh. In nec ipsum porta, varius leo eu, condimentum quam. Donec gravida euismod ipsum, at consequat orci efficitur nec. Phasellus lectus arcu, auctor eget porttitor eget, venenatis a lacus. Suspendisse quis urna rhoncus, commodo justo at, tempor nisl."
          />
          <textarea
            aria-invalid={false}
            aria-required={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiTextarea-textarea-106 MuiInput-input-94 MuiInput-inputMultiline-97"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name="description"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            rows={1}
            type="text"
            value="Aenean sit amet malesuada nibh. Proin nisi lorem, facilisis at tortor vel, convallis ornare nibh. In nec ipsum porta, varius leo eu, condimentum quam. Donec gravida euismod ipsum, at consequat orci efficitur nec. Phasellus lectus arcu, auctor eget porttitor eget, venenatis a lacus. Suspendisse quis urna rhoncus, commodo justo at, tempor nisl."
          />
        </div>
      </div>
      <p
        className="MuiFormHelperText-root-108"
      >
        Select text to enable text-formatting tools.
      </p>
    </div>
  </div>
</div>
`;
